# IMS-problem_MIPT-CC

./: CMakeLists.txt  README.md
results/: test_approximation.csv  test_time_2_machines.csv  test_time_3_machines.csv
src/: CMakeLists.txt
src/ims/: ims.hpp  machine.hpp
src/runners/: profiler.hpp  runner.cpp
